# stk

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  SuperTuxKart.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dist.vcxproj  dist.vcxproj.filters  lowerfile.py  supertuxkart.desktop  supertuxkart.vcxproj  supertuxkart.vcxproj.filters
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  dist_cmakeRulesBuildPhase.makeRelWithDebInfo  install_postBuildPhase.makeDebug  supertuxkart_postBuildPhase.makeMinSizeRel  supertuxkart_preBuildCommands.makeRelWithDebInfo
data/fonts/: BigDigitFont.xml
data/karts/: License.txt  Makefile.am
data/karts/adiumy/: kart.xml
data/karts/beagle/: kart.xml
data/karts/konqi/: kart.xml  konqi.b3dz  wheel-front-left.b3d  wheel-front-right.b3d  wheel-rear-left.b3d  wheel-rear-right.b3d
data/karts/nolok/: kart.xml
data/karts/tux/: kart.xml
data/music/: ChillCarrier-Druckverlust.music  License.txt  demonhill.music  main_theme.music  subsea.music  win_theme.music
data/po/: fr.po
data/sfx/: License.txt  sfx.xml
data/textures/: License.txt  materials.xml
ios/supertuxkartios/: AppDelegate.h  AppDelegate.mm  ViewController.h  ViewController.m  main.m  supertuxkartios-Info.plist  supertuxkartios-Prefix.pch
ios/supertuxkartios.xcodeproj/: project.pbxproj
lib/bullet/: INSTALL.vcxproj  bulletcollision.vcxproj  bulletdynamics.vcxproj  (+5 more)
src/: main.cpp  main_loop.cpp
(+265 files in other folders)
